tests/baselines/reference/parserIndexSignature1(strict=true).errors.txt
parserIndexSignature1.ts(2,4): error TS1017: An index signature cannot have a rest parameter.
parserIndexSignature1.ts(2,4): error TS7019: Rest parameter 'a' implicitly has an 'any[]' type.


==== parserIndexSignature1.ts (2 errors) ====
    interface I {
      [...a]
       ~~~
!!! error TS1017: An index signature cannot have a rest parameter.
       ~~~~
!!! error TS7019: Rest parameter 'a' implicitly has an 'any[]' type.
    }